# sergio_torso_calibration

./: CMakeLists.txt  README.md  package.xml  quat_to_euler.py
launch/: start.launch
matlab/: ConvertSpindleAngle_constants.m  an.m  angle0_to_angle1.m  angle0_to_spindle1.m  angle0_to_spring1.m  angle2_to_spindle2.m  angle2_to_spring2.m  calibration_torso.m  cosinerule.m  imu_angle0_to_angle0.m  imu_angle2_to_angle2.m  torso_measures_NX.m
src/: quat_to_euler.py
